CASSANALYTICS-84: Create bridge modules for Cassandra 5.0 (#131)
Patched by Lukasz Antoniak; Reviewed by Yifan Cai for CASSANALYTICS-84