@@ -25,9 +25,9 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
-import com.google.common.collect.ImmutableMap;
-
 import org.apache.cassandra.spark.data.FileType;
+
+import static java.util.Map.entry;
 
 public final class Properties
 {
@@ -42,18 +42,24 @@ public final class Properties
     public static final int DEFAULT_MAX_POOL_SIZE = 64;
     public static final long DEFAULT_MAX_BUFFER_SIZE = 6 * MEBI_BYTES;
     public static final long DEFAULT_CHUNK_BUFFER_SIZE = 4 * MEBI_BYTES;
-    public static final Map<FileType, Long> DEFAULT_MAX_BUFFER_OVERRIDE = ImmutableMap.of(
-            FileType.INDEX,            128 * KIBI_BYTES,
-            FileType.SUMMARY,          256 * KIBI_BYTES,
-            FileType.STATISTICS,       128 * KIBI_BYTES,
-            FileType.COMPRESSION_INFO, 128 * KIBI_BYTES,
-            FileType.COMMITLOG,         64 * MEBI_BYTES);
-    public static final Map<FileType, Long> DEFAULT_CHUNK_BUFFER_OVERRIDE = ImmutableMap.of(
-            FileType.INDEX,             32 * KIBI_BYTES,
-            FileType.SUMMARY,          128 * KIBI_BYTES,
-            FileType.STATISTICS,        64 * KIBI_BYTES,
-            FileType.COMPRESSION_INFO,  64 * KIBI_BYTES,
-            FileType.COMMITLOG,         64 * MEBI_BYTES);
+    public static final Map<FileType, Long> DEFAULT_MAX_BUFFER_OVERRIDE = Map.ofEntries(
+    entry(FileType.INDEX,            128 * KIBI_BYTES),
+    entry(FileType.SUMMARY,          256 * KIBI_BYTES),
+    entry(FileType.STATISTICS,       128 * KIBI_BYTES),
+    entry(FileType.COMPRESSION_INFO, 128 * KIBI_BYTES),
+    entry(FileType.COMMITLOG,         64 * MEBI_BYTES),
+    entry(FileType.PARTITIONS_INDEX,  128 * KIBI_BYTES),
+    entry(FileType.ROWS_INDEX,        128 * KIBI_BYTES));
+    // According to https://github.com/apache/cassandra/blob/trunk/src/java/org/apache/cassandra/io/sstable/format/bti/BtiFormat.md#partition-index
+    // BTI partition and row index page size equals 4096 bytes.
+    public static final Map<FileType, Long> DEFAULT_CHUNK_BUFFER_OVERRIDE = Map.ofEntries(
+    entry(FileType.INDEX,             32 * KIBI_BYTES),
+    entry(FileType.SUMMARY,          128 * KIBI_BYTES),
+    entry(FileType.STATISTICS,        64 * KIBI_BYTES),
+    entry(FileType.COMPRESSION_INFO,  64 * KIBI_BYTES),
+    entry(FileType.COMMITLOG,         64 * MEBI_BYTES),
+    entry(FileType.PARTITIONS_INDEX,  4 * KIBI_BYTES),
+    entry(FileType.ROWS_INDEX,        4 * KIBI_BYTES));
     public static final int DEFAULT_TIMEOUT_SECONDS = (int) TimeUnit.MINUTES.toSeconds(10);
 
     // Expansion and Shrink
